# GetRichQuick

./: README.md  docker-compose.yaml  pyproject.toml
data/: company_metadata.csv  test_metadata.csv
output/: backtest_results_20260119_215341.json
src/: __init__.py  main.py  screener.py
src/backtesting/: __init__.py  engine.py  plotter.py  reporter.py
src/data/: __init__.py  company_metadata.py  index_fetcher.py  market_data.py
src/filters/: __init__.py  age_filter.py  country_filter.py  performance_filter.py
src/models/: __init__.py  schemas.py
src/utils/: __init__.py  config.py  logger.py
utils/: get_ticker_sp.py  update_metadata.py
